--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     --card-clr: #2E86D81A;
     --neutral-clr: rgba(160, 172, 189, 1);
     --last-clr: rgba(24, 61, 95, 1);
-    
+
     --text-clr: rgba(233, 233, 233, 1);
 
     --ff-primary: "Monda", sans-serif;
@@ -76,15 +76,16 @@
     height: 100%;
 
 
-  position: absolute;
-   z-index: -9999999;
-   
+    position: absolute;
+    z-index: -9999999;
+
 }
 
-.topic-container{
+.topic-container {
     position: relative;
-    
+
 }
+
 .inner-container {
     overflow: hidden;
     margin: 0 auto;
@@ -92,7 +93,7 @@
 }
 
 body {
-    margin: 0;  
+    margin: 0;
     padding: 0;
 }
 
@@ -121,24 +122,27 @@ body {
     font-family: var(--ff-primary);
 
 }
+
 .navbar ul li a {
     text-decoration: none;
     color: var(--neutral-clr);
     transition: all 0.3s ease;
 }
 
-.navbar ul li a:hover{
+.navbar ul li a:hover {
     color: var(--text-clr);
-    text-shadow: 0px 4px 15px  rgba(255, 255, 255, 0.60);    
+    text-shadow: 0px 4px 15px rgba(255, 255, 255, 0.60);
 }
-.phone-electro{
+
+.phone-electro {
     position: absolute;
     display: none;
 }
+
 .section1 {
     display: flex;
     flex-direction: column;
-    margin-bottom: 292px;
+    margin-bottom: 400px;
 
 }
 
@@ -151,7 +155,7 @@ body {
 .electro {
     position: absolute;
     top: 50px;
-    
+
 }
 
 .antonio {
@@ -177,23 +181,32 @@ body {
         right: 0;
     }
 }
-.solo-electro{
+
+.solo-electro {
     margin-bottom: 30px;
     position: relative;
-    z-index: -1;    
+    z-index: -1;
 }
+
 .solo-electro2 {
     position: absolute;
     width: 40%;
     height: 100%;
     background-color: var(--primary-clr);
     top: 0;
-    animation: colorCross 2s linear infinite;
-    
+    animation: colorCross 2.5s linear infinite;
+
 }
-.solo-electro svg{
+
+.late {
+    transform: translateX(-100%);
+    animation-delay: 1.5s;
+}
+
+.solo-electro svg {
     width: 70%;
 }
+
 @keyframes colorCross {
     0% {
         transform: translateX(-100%);
@@ -260,7 +273,7 @@ body {
 
 
 
-.aboutme-speeech {
+.Heading-div-speech {
     max-width: 754px;
 
 }
@@ -269,19 +282,28 @@ body {
 
 .flex-container {
     position: relative;
-    
-   margin: 0 328px;
-   padding-bottom: 270px;
+
+    margin: 0 220px;
+    padding-bottom: 270px;
 }
 
 .education {
     position: absolute;
-    right: 10%;
+    right: 8%;
     top: 0;
 }
-.education img{
-    width: 400px;
-    height: 300px;
+
+.edu1,
+.edu2 {
+    top: 5%;
+}
+
+.edu3 {
+    top: 25%;
+}
+
+.contact-details .Heading-div-title {
+    margin-bottom: 100px;
 }
 
 .detail-title {
@@ -289,7 +311,7 @@ body {
     font-size: var(--fs-200);
     font-weight: var(--fw-bold);
     color: var(--secondary-clr);
-    
+
 }
 
 .detail-speech {
@@ -304,13 +326,13 @@ body {
 .detail-container-end {
     display: flex;
     justify-content: end;
-   
+
 }
 
 
 
 .details-container {
-   margin: 276px auto 136px;
+    margin: 276px auto 136px;
 }
 
 .detail3 {
@@ -319,6 +341,7 @@ body {
 
 .detail-union {
     position: absolute;
+    z-index: -1;
     top: 350px;
     right: 40%;
 }
@@ -331,8 +354,8 @@ h4 {
     background-color: transparent;
     border-color: var(--neutral-clr);
     cursor: pointer;
-   transition: all 0.6s ease;
-   
+    transition: all 0.6s ease;
+
 }
 
 .button span {
@@ -342,79 +365,99 @@ h4 {
     font-weight: bold;
     margin: 7px 23px;
 }
+
 .button:hover {
     background-color: var(--secondary-clr);
-    border-color: transparent; 
+    border-color: transparent;
 }
+
 .cv-button {
     display: flex;
     justify-content: center;
 }
-
-.solo-electro4 {
-   
-        position: absolute;
-        width: 40%;
-        height: 150%;
-        background-color: var(--primary-clr);
-        top: 0;
-        animation: colorCross2 2s linear infinite;
-       
-    
+.phone-button{
+    background-color: transparent;
+    border: none;
+    display: none;
+    cursor: pointer;
+    padding: 0;
 }
-.solo-electro3 svg{
+
+.solo-electro3 svg {
     width: 70%;
 }
-.solo-electro3{
+
+.solo-electro3 {
     margin-bottom: 30px;
     position: relative;
-    z-index: -1; 
+    z-index: -1;
     display: flex;
-    justify-content: flex-end;  
+    justify-content: flex-end;
 }
- @keyframes colorCross2 {
-            0% {
-                transform: translateX(100%);
-            }
-        
-            100% {
-                transform: translateX(-200%);
-            }
-        }
+
+.solo-electro4 {
+
+    position: absolute;
+    width: 40%;
+    height: 150%;
+    background-color: var(--primary-clr);
+    top: 0;
+    animation: colorCross2 2.5s linear infinite;
+
+
+}
+
+.late2 {
+    transform: translateX(100%);
+    animation-delay: 1.5s;
+}
+
+@keyframes colorCross2 {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(-200%);
+    }
+}
 
 
 
 
 
-.Myskills-container{
+.Myskills-container {
     position: relative;
     margin: auto 328px;
-   
+
 }
-.little-code{
+
+.little-code {
     position: absolute;
     z-index: -1;
     top: -10%;
 }
-.big-code{
+
+.big-code {
     position: absolute;
     bottom: 0;
     right: 0;
-  
+
 }
+
 .myskills-title {
     font-family: var(--ff-primary);
     font-size: var(--fs-secondary-heading);
     font-weight: var(--fw-bold);
     color: var(--text-clr);
     margin-bottom: 76px;
-  
+
 
 
 }
 
 .skills-cards-container {
-    display: flex;   
+    display: flex;
     gap: 86px;
 
     justify-content: center;
@@ -426,7 +469,7 @@ h4 {
     display: flex;
     flex-direction: column;
     max-width: 365px;
-   
+
 
 }
 
@@ -440,67 +483,61 @@ h4 {
 }
 
 
-.myskills-main-container{
+.myskills-main-container {
     position: relative;
 }
 
-.Section{
+.Section {
     position: relative;
 }
 
-
-
-
-.about-me-cards{
-   margin: 280px auto 136px;
-   display: flex;
-   flex-direction: column;
-   gap: 80px;
+.about-me-cards {
+    margin: 280px auto 136px;
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
 }
-.double-card{
+
+.double-card {
     display: flex;
     gap: 80px;
-   
-}
-.card{
-    border-radius: 5px;
-    border: 1px solid #707070;
-    overflow: hidden;
-    position: relative;
-   
+
 }
 
-.card img{
+.card {
+    border-radius: 5px;
+
+    overflow: hidden;
+    position: relative;
+
+}
+
+.card img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition:all 0.5s ;
+    transition: all 0.5s;
 }
+
 .card:hover img {
     transform: scale(1.3);
     opacity: 0.5;
 }
 
-
-
-
-
-
-
-.gmail{
+.gmail {
     display: flex;
     align-items: center;
     margin-top: 50px;
     gap: 50px;
 }
 
-
-.footer-container{
+.footer-container {
     display: flex;
     justify-content: center;
     padding: 20px;
 }
-.footer{
+
+.footer {
     margin: 0;
     padding: 0;
 }
