--- a/css/responsive.css
+++ b/css/responsive.css
@@ -399,6 +399,7 @@
 @media (max-width:580px) {
     .phone-button{
      display: inline-block;
+     margin-right: 10px;
     }
     .edu3 img {
         width: 299px;
