--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,6 +14,15 @@
         width: 499px;
         height: 251px;
     }
+    .detail-union {
+        position: absolute;
+        z-index: -1;
+        top: 330px;
+        right: 40%;
+    }
+    .detail-speech {
+        max-width: 358px;
+    }
 }
 
 
@@ -156,7 +165,7 @@
     }
 
     .details-container {
-        margin: 176px auto 80px;
+        margin: 176px auto 150px;
     }
 
     .detail-union {
@@ -196,7 +205,9 @@
     .antonio img {
         width: 350px;
     }
-
+    .detail-union {
+        top: 100px;
+    }
     .electro img {
         width: 150px;
     }
@@ -280,6 +291,7 @@
     .skill-card-speech {
         display: flex;
         align-items: center;
+        margin: auto 10px auto auto;
     }
 
     .antonio img {
@@ -338,7 +350,7 @@
 
 @media(max-width:670px) {
     .detail-union {
-        top: 50px;
+        top: 0;
     }
 
     .gmail img {
@@ -354,7 +366,7 @@
     }
 
     .details-container {
-        margin: 140px auto 80px;
+        margin: 140px auto 100px;
     }
 
     .Heading-div-speech {
@@ -452,9 +464,9 @@
         position: absolute;
         flex-direction: column;
         top:10% ;
-       align-items: end;
+       
        background-color: var(--card-clr);
-       padding: 50px 20px 50px 50px;
+       padding: 50px 30px 50px 20px;
        border-right: 5px;
        border-top-left-radius: 10px;
        border-bottom-left-radius: 10px;
@@ -466,14 +478,15 @@
         opacity: 1;
         transform: translateX(0%);
     }
+ 
     .navbar{
         justify-content:flex-end;
         
         z-index: 1;
     }
-
+   
     .section1 {
-        padding-top: 350px;
+        padding-top: 250px;
     }
 
     .detail3 {
@@ -536,11 +549,14 @@
     }
 
     .detail-union {
-        top: 30px;
+        top: -20px;
     }
 
     .detail2 {
         margin-top: -70px;
+    }
+    .detail3{
+        margin-top: -10px;
     }
 
     .phone-electro {
