--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,7 @@ body {
 
 
 .details-container {
-    margin: 276px auto 136px;
+    margin: 276px auto 200px;
 }
 
 .detail3 {
@@ -371,20 +371,85 @@ h4 {
     border-color: transparent;
 }
 
-.cv-button {
-    display: flex;
-    justify-content: center;
+.phone-button {
+    height: auto;
 }
-.phone-button{
+
+
+.phone-button {
     background-color: transparent;
     border: none;
     display: none;
     cursor: pointer;
     padding: 0;
+    height: 30px;
+    width: 30px;
+    position: relative;
+    overflow: hidden;
 }
+
+.bars {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+   
+}
+
+.bars .barre {
+    background-color: var(--secondary-clr);
+    width: 100%;
+    height: 3px;
+    transition: all 0.5s ease;
+    border-radius: 5px;
+    opacity: 0.5;
+    margin: 0 auto;
+}
+.bars .bar1 , .bars .bar3{
+    width: 70%;
+}
+.bars .bar2{
+    transition: all 0.9s ease;
+}
+.navbar.active >.phone-button .bars .barre{
+    opacity: 1;
+}
+.navbar.active >.phone-button .bars .bar1{
+    position: absolute;    
+    transform: rotate(-135deg);
+    width: 100%;
+   
+}
+.navbar.active >.phone-button .bars .bar3{
+    position: absolute;
+    transform: rotate(135deg);   
+    width: 100%;
+}
+.navbar.active >.phone-button .bars .bar2{
+transform: scale(0);
+}
+
+
+
+.cv-button {
+    display: flex;
+    justify-content: center;
+}
+
+
 
 .solo-electro3 svg {
     width: 70%;
+}
+
+.about-me-cards .hidden {
+    display: none;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+.about-me-cards .active {
+    opacity: 1;
+    display: flex;
 }
 
 .solo-electro3 {
@@ -468,7 +533,7 @@ h4 {
     background-color: var(--card-clr);
     display: flex;
     flex-direction: column;
-    max-width: 365px;
+    width: 365px;
 
 
 }
@@ -501,7 +566,7 @@ h4 {
 .double-card {
     display: flex;
     gap: 80px;
-
+    justify-content: center;
 }
 
 .card {
