--- a/css/style.css
+++ b/css/style.css
@@ -71,21 +71,59 @@
     color: var(--text-clr);
 }
 
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateY(30%);
+    transition: all 1s;
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateY(0);
+    transform: translateX(0);
+}
+
+.detail-union.hidden {
+
+    filter: blur(0);
+    transform: translateY(0);
+    transform: translateX(0);
+}
+
+
+
+.skill-card:nth-child(2) {
+    transition-delay: 200ms;
+}
+
+.skill-card:nth-child(3) {
+    transition-delay: 400ms;
+}
+
 .main-container {
     width: 100%;
     height: 100%;
 
+    overflow: hidden;
 
     position: absolute;
     z-index: -9999999;
 
 }
-.footer-container label{
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
+.footer-container label {
     margin-left: 5px;
 }
+
 .topic-container {
     position: relative;
-
+    overflow: hidden;
 }
 
 .inner-container {
@@ -188,6 +226,7 @@ body {
     margin-bottom: 30px;
     position: relative;
     z-index: -1;
+
 }
 
 .solo-electro2 {
@@ -277,7 +316,7 @@ body {
 
 .Heading-div-speech {
     max-width: 754px;
-
+    transition-delay: 200ms;
 }
 
 
@@ -293,6 +332,7 @@ body {
     position: absolute;
     right: 8%;
     top: 0;
+    transition-delay: 400ms;
 }
 
 .edu1,
@@ -304,9 +344,16 @@ body {
     top: 25%;
 }
 
-.contact-details .Heading-div-title {
-    margin-bottom: 100px;
+.det {
+    margin-top: 80px;
 }
+
+.Heading-div-title {
+    margin-bottom: 20px;
+
+}
+
+
 
 .detail-title {
     font-family: var(--ff-primary);
@@ -353,11 +400,18 @@ h4 {
 }
 
 .button {
-    background-color: transparent;
-    border-color: var(--neutral-clr);
-    cursor: pointer;
-    transition: all 0.6s ease;
 
+    background-color: var(--last-clr);
+    cursor: pointer;
+
+
+    position: relative;
+    border: none;
+    transition: all 0.7s;
+}
+
+.glow {
+    text-shadow: 0px 0px 30px var(--last-clr);
 }
 
 .button span {
@@ -366,10 +420,37 @@ h4 {
     font-family: var(--ff-primary);
     font-weight: bold;
     margin: 7px 23px;
+    opacity: 0.7;
+    transition: all 0.7s;
+    z-index: -9999999;
+}
+
+.button::before {
+
+    content: " ";
+    width: 100%;
+    height: 100%;
+    background-color: var(--last-clr);
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: -1;
+
+    transition: all 1s;
+}
+
+.button:hover::before {
+    transform: translate(3.5px, 3px);
+    background-color: var(--text-clr);
+    box-shadow: 5px 3px 30px var(--last-clr);
+
+}
+
+.button:hover span {
+    opacity: 1;
 }
 
 .button:hover {
-    background-color: var(--secondary-clr);
     border-color: transparent;
 }
 
@@ -394,7 +475,7 @@ h4 {
     display: flex;
     flex-direction: column;
     gap: 8px;
-   
+
 }
 
 .bars .barre {
@@ -406,35 +487,48 @@ h4 {
     opacity: 0.5;
     margin: 0 auto;
 }
-.bars .bar1 , .bars .bar3{
+
+.bars .bar1,
+.bars .bar3 {
     width: 70%;
 }
-.bars .bar2{
+
+.bars .bar2 {
     transition: all 0.9s ease;
 }
-.navbar.active >.phone-button .bars .barre{
+
+.navbar.active>.phone-button .bars .barre {
     opacity: 1;
 }
-.navbar.active >.phone-button .bars .bar1{
-    position: absolute;    
+
+.navbar.active>.phone-button .bars .bar1 {
+    position: absolute;
     transform: rotate(-135deg);
     width: 100%;
-   
+
 }
-.navbar.active >.phone-button .bars .bar3{
+
+.navbar.active>.phone-button .bars .bar3 {
     position: absolute;
-    transform: rotate(135deg);   
+    transform: rotate(135deg);
     width: 100%;
 }
-.navbar.active >.phone-button .bars .bar2{
-transform: scale(0);
+
+.navbar.active>.phone-button .bars .bar2 {
+    transform: scale(0);
 }
 
 
 
 .cv-button {
+
     display: flex;
     justify-content: center;
+
+}
+
+.contact-button {
+    margin-top: 80px;
 }
 
 
@@ -443,10 +537,14 @@ transform: scale(0);
     width: 70%;
 }
 
-.about-me-cards .hidden {
+.about-me-cards .hide {
     display: none;
     opacity: 0;
     transition: opacity 0.5s ease;
+}
+
+.double-card .card:nth-child(2) {
+    transition-delay: 300ms;
 }
 
 .about-me-cards .active {
@@ -455,7 +553,7 @@ transform: scale(0);
 }
 
 .solo-electro3 {
-    margin-bottom: 30px;
+    margin-bottom: 70px;
     position: relative;
     z-index: -1;
     display: flex;
@@ -488,9 +586,6 @@ transform: scale(0);
         transform: translateX(-200%);
     }
 }
-
-
-
 
 
 .Myskills-container {
@@ -603,12 +698,29 @@ transform: scale(0);
     justify-content: center;
     padding: 20px;
 }
-.electro-night{
-   position: absolute;
-   
+
+.electro-night {
+    position: absolute;
+
     bottom: 0;
 }
+
 .footer {
     margin: 0;
     padding: 0;
+
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    background: radial-gradient(circle, rgba(34, 91, 145, 0.8) 0%, rgb(16, 45, 72) 80%);
+
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+}
+
+
+
+
+@media(prefers-reduced-motion) {
+    .hidden {
+        transition: none;
+    }
 }
